<resources>
    <string name="app_name" translatable="false">HappyTails</string>
    <string name="home">Home</string>
    <string name="tips">Tips</string>
    <string name="pets">Pets</string>
    <string name="profile">Profile</string>
    <string name="care_tips">Care tips</string>
    <string name="your_pets">Your pets</string>
    <string name="search">Search</string>
    <string name="read_article">Read Article</string>
    <string name="vet_visits">Vet Visits</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends">Friends</string>
    <string name="see_more">See more</string>
    <string name="setting">Setting</string>
    <string name="my_account">My account</string>
    <string name="notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="content_amp_display"><![CDATA[Content & Display]]></string>
    <string name="book_a_vet_appointment">Book a Vet Appointment</string>
    <string name="comments">Comments</string>
    <string name="book_now">Book Now</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="select_pet">Select Pet</string>
    <string name="select_time">Select Time</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password is too short</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="singIn_button_text">Sing in</string>
    <string name="password_hint">password</string>
    <string name="email_or_username_hint">email or username</string>
    <string name="invalid_repeat_password">Passwords do not match</string>
    <string name="username_hint">username</string>
    <string name="email_hint">email (optional)</string>
    <string name="repeat_password_hint">repeat password</string>
    <string name="register_button_text">Register</string>
    <string name="no_account">Don`t have an account?</string>
    <string name="register">Register</string>
    <string name="have_acoount">Already have an account?</string>
    <string name="sing_in">Sing in</string>
    <string name="invalid_sing_in_data">Invalid username or password</string>
</resources>