<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".login.SingInFragment">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/main_text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Контейнер для полей и кнопки -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/search_field_bg_color"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/singInErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/invalid_sing_in_data"
                android:textAlignment="center"
                android:textColor="@color/error_text_color"
                android:textSize="20sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/emailOrUsername"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rounded12"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/inter"
                android:hint="@string/email_or_username_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="8dp"
                android:textColor="@color/main_text_color"
                android:textColorHint="@color/additional_text_color" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded12"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/inter"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="8dp"
                android:textColor="@color/main_text_color"
                android:textColorHint="@color/additional_text_color" />

            <Button
                android:id="@+id/singInBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/inter_bold"
                android:text="@string/singIn_button_text"
                android:textColor="@color/main_text_color" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/dog_run_anim_drawable"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toRegisterText"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/toRegisterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter"
        android:textAlignment="center"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="@string/no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>